--- a/src/components/styles/layout.module.css
+++ b/src/components/styles/layout.module.css
@@ -7,7 +7,8 @@
 
 .subContainer {
   width: 100%;
-  min-height: calc(100vh - 100px);
+  /* min-height: calc(100vh - 100px); */
+  min-height: 1500px;
   border-top-left-radius: 95px;
   border-top-right-radius: 95px;
   background-image: url('/bg1_1.jpg');
@@ -16,30 +17,21 @@
 }
 
 .header {
-  /* background-color: #690D77; */
-  /* background-color: #8E11A1; */
-  width: 100%;
-  height: 200px;
-  border-top-left-radius: 90px;
-  border-top-right-radius: 90px;
-  position: relative;
+  margin-left: auto;
+  position: sticky;
+  top: 0px;
+  min-width: fit-content;
 }
 
 .buttonContainer {
-  height: 100%;
-  width: 500px;
-  max-width: 50%;
-  position: absolute;
-  right: 70px;
-  top: 65px;
-  display: inline;
+  display: inline-block;
 }
 
 .floatybit {
   height: 110px;
   margin-top: 0.4em;
   font-size: 2.7em;
-  /* display: grid; */
+  display: flex;
 }
 
 .floatybit a {
