--- a/src/pages/cv.module.css
+++ b/src/pages/cv.module.css
@@ -1,5 +1,18 @@
 .container {
-  margin: 20px 70px 0px 70px;
+  margin-inline: 70px;
+  padding-top: 50px;
   display: grid;
+  font-size: 16px;
 }
 
+.container h1 {
+  border-bottom: 2px solid var(--background-color);
+}
+
+.container p {
+  margin-top: 8px;
+}
+
+.container b {
+  font-weight: 500;
+}
