--- a/src/components/styles/cvitem.module.css
+++ b/src/components/styles/cvitem.module.css
@@ -3,7 +3,7 @@
 }
 
 .date {
-  color: rgb(170, 233, 143);
+  color: var(--mid-green);
   font-size: 14px;
   text-align: right;
   min-width: 120px;
@@ -23,4 +23,18 @@
 
 .description li {
   list-style: circle outside;
+}
+
+.skillname {
+  box-sizing: border-box;
+  min-width: 170px !important;
+  max-width: 170px !important;
+  color: var(--mid-green);
+  padding-right: 10px;
+  padding-bottom: 5px;
+  border-right: 3px solid var(--background-color);
+}
+
+.skilldesc {
+  padding-left: 10px;
 }
