--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,7 @@
 :root {
   --background-color: #441263;
+  --mid-green: rgb(170, 233, 143);
+  --light-green: rgb(119, 178, 94);
 }
 
 html,
@@ -32,11 +34,12 @@ h2 {
   margin-bottom: 5px;
   font-weight: 500;
   font-size: 1.3em;
-  color: rgb(119, 178, 94);
+  color: var(--light-green);
 }
 
 h3 {
   margin: 0px;
   font-style: italic;
   font-weight: 400;
+  font-size: 1.1em;
 }
