--- a/src/components/styles/button.module.css
+++ b/src/components/styles/button.module.css
@@ -1,7 +1,7 @@
 .buttonOuter {
   height: 55px;
   display: inherit;
-  margin: 15px;
+  margin: clamp(10px, (100vw - 670px) / 20 + 10px, 15px);
 }
 
 .buttonOuter div {
@@ -13,7 +13,6 @@
 }
 
 .buttonOuter div a {
-  font-size: 20px;
   display: table-cell;
   vertical-align: middle;
   text-align: center;
