--- a/src/components/styles/cvitem.module.css
+++ b/src/components/styles/cvitem.module.css
@@ -1,4 +1,8 @@
-.content {
+.item {
+  display: grid;
+}
+
+.item div {
   display: flex;
 }
 
@@ -37,4 +41,19 @@
 
 .skilldesc {
   padding-left: 10px;
+}
+
+.content {
+  display: flex;
+}
+
+.spacing {
+  min-width: 120px;
+}
+
+@media screen and (max-width: 640px) {
+  .spacing {
+    min-width: 0;
+    width: 0;
+  }
 }
