--- a/src/components/styles/layout.module.css
+++ b/src/components/styles/layout.module.css
@@ -1,23 +1,37 @@
 .container {
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-inline: clamp(10px, calc((100vw - 400px)) / 7.5, 50px);
   max-width: 1024px;
+  min-width: 300px;
   align-self: center;
 }
 
-.subContainer {
+.canvas {
   width: 100%;
-  /* min-height: calc(100vh - 100px); */
-  min-height: 1500px;
-  border-top-left-radius: 95px;
-  border-top-right-radius: 95px;
+  min-height: calc(100vh - 100px);
+  /* min-height: 1500px; */
+  --radius: clamp(25px, calc((100vw - 600px) / 6 + 25px), 95px);
+  border-top-left-radius: var(--radius);
+  border-top-right-radius: var(--radius);
   background-image: url('/bg1_1.jpg');
   background-size: cover;
   height: fit-content;
   font-weight: 200;
+  min-width: 260px;
 }
 
-.header {
+.canvasContents {
+  margin-inline: clamp(10px, calc((100vw - 450px) / 7.5 + 10px), 70px);
+  padding-top: clamp(20px, calc((100vw - 600px) / 10 + 20px), 50px);
+  font-size: 16px;
+}
+
+@media screen and (max-width: 400px) {
+  .canvasContents {
+    font-size: 12px !important;
+  }
+}
+
+.navbar {
   margin-left: auto;
   position: sticky;
   top: 0px;
@@ -26,19 +40,46 @@
 
 .buttonContainer {
   display: inline-block;
+  font-size: clamp(12px, calc((100vw - 770px) / 100 + 12px), 20px);
+}
+
+@media screen and (max-width: 620px) {
+  .buttonContainer {
+    display: grid;
+  }
+
+  .buttonContainer div {
+    margin: 0;
+    height: fit-content;
+  }
+  
+  .buttonContainer div a {
+    text-align: right;
+  }
+  
+  .canvasContents {
+    font-size: 14px;
+  }
 }
 
 .floatybit {
-  height: 110px;
+  height: calc(var(--font-size-name) * 2.5 + 10px);
   margin-top: 0.4em;
-  font-size: 2.7em;
+  --font-size-name: clamp(24px, calc((100vw - 90px) / 20), 44px);
+  font-size: var(--font-size-name);
   font-weight: 400;
   display: flex;
   color: hsl(160, 86%, 97%);
+  overflow: hidden;
 }
 
 .floatybit a {
   height: fit-content;
+}
+
+.nameContainer, .name, .whoami {
+  width: calc(var(--font-size-name) * 7.73);
+  padding-bottom: 10px;
 }
 
 .name :hover {
@@ -49,7 +90,6 @@
   position: relative;
   left: 0px;
   top: 0px;
-  width: 330px;
   float: left;
 }
 
