--- a/src/pages/cv.module.css
+++ b/src/pages/cv.module.css
@@ -44,4 +44,8 @@
   .imageWrapper {
     display: block !important;
   }
+
+  .container > section:nth-child(3) > article:nth-child(4)  {
+    padding-top: 40px !important;
+  }
 }
