--- a/src/pages/styles/index.module.css
+++ b/src/pages/styles/index.module.css
@@ -1,4 +1,5 @@
 .content {
+  --img-width: clamp(100px, calc((100vw - 460px) / 2.8 + 100px), 250px);
   margin-top: 50px;
   display: flex;
   flex-direction: row;
@@ -9,11 +10,21 @@
   flex: 100;
 }
 
+.about > h1 {
+  margin-right: calc(var(--img-width) + 20px);
+}
+
 .image, .image img {
-  max-width: 250px;
+  min-width: var(--img-width);
+  max-width: var(--img-width);
+  float: right;
 }
 
 .image {
-  margin-top: 20px;
-  margin-left: 40px;
+  /* margin-top: 20px; */
+  margin-top: 10px;
+  margin-left: 20px;
+  margin-bottom: 20px;
 }
+
+/*860*/
