--- a/src/components/styles/video-item.module.css
+++ b/src/components/styles/video-item.module.css
@@ -9,8 +9,58 @@
   flex: 100;
 }
 
-.image {
-  max-width: 240px;
-  border: 2px solid white;
+.text > div {
+  display: flex;
+  flex-direction: row;
+}
+
+.image, .imageColumn {
+  max-width: clamp(100px, calc((100vw - 450px) / 2.5 + 100px), 240px);
   margin-left: 20px;
+}
+
+.image img, .imageColumn img {
+  /* width: inherit; */
+  max-width: inherit;
+  height: auto;
+  border: 2px solid white;
+}
+
+.imageColumn {
+  display: none;
+  margin-top: 10px;
+}
+
+@media screen and (max-width: 870px) {
+  .content h2 {
+    font-size: 1.2em;
+  }
+}
+
+@media screen and (max-width: 830px) {
+  .content h2 {
+    font-size: 1.1em;
+  }
+
+  .image {
+    margin-left: 0px;
+  }
+
+  .content {
+    padding-right: 5px;
+  }
+}
+
+@media screen and (max-width: 445px) {
+  .image {
+    display: none;
+  }
+
+  .imageColumn {
+    display: block;
+  }
+
+  .content {
+    padding-bottom: 10px;
+  }
 }
